Week 3/day_2_activities/lb/vpc.tf
resource "aws_vpc" "vpc" {
  cidr_block = var.vpc_cidr

  tags = {
    Name = "vpc-rory"
  }
}
